--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-07-12  George B Moody <george@mit.edu>
+
+	Release 10.5.0
+
+	* based on Isaac Henry's wfdb-swig r24 (2011-03-01) from code.google.com
+	* Java, perl, and python wrappers work on 64-bit Linux and Mac OS X
+	* C# wrappers need work
+
 2006-04-06  George B Moody <george@mit.edu>
 
 	Release 10.4.1
@@ -6,4 +14,3 @@
 	* redundant files removed
 	* builds cleanly on FC4 and FC5 using top-level Makefile
 
-	
